# timeseries-forecasting

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: main.py  model.py  schemas.py
data/: download.py
src/: dataset.py  features.py  forecast.py  train.py
tests/: conftest.py  test_service.py
tests/fixtures/: ett_sample.csv
