[project]
name = "timeseries-forecasting"
version = "1.0.0"
description = "Direct multi-horizon forecasting on the public ETT electricity dataset, served behind an HTTP API."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = [".build-libs", "data/raw"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
